# brillinkmicros/api/rc/v1/rc_grpc.pb.go
@@ -22,7 +22,7 @@ const (
 	RcService_ListReportInfos_FullMethodName            = "/api.rc.v1.RcService/ListReportInfos"
 	RcService_GetReportContent_FullMethodName           = "/api.rc.v1.RcService/GetReportContent"
 	RcService_RefreshReportContent_FullMethodName       = "/api.rc.v1.RcService/RefreshReportContent"
-	RcService_SetReportDependencyData_FullMethodName    = "/api.rc.v1.RcService/SetReportDependencyData"
+	RcService_InsertReportDependencyData_FullMethodName = "/api.rc.v1.RcService/InsertReportDependencyData"
 	RcService_UpdateReportDependencyData_FullMethodName = "/api.rc.v1.RcService/UpdateReportDependencyData"
 	RcService_GetReportDependencyData_FullMethodName    = "/api.rc.v1.RcService/GetReportDependencyData"
 )
@@ -34,8 +34,8 @@ type RcServiceClient interface {
 	ListReportInfos(ctx context.Context, in *PaginationReq, opts ...grpc.CallOption) (*ReportInfosResp, error)
 	GetReportContent(ctx context.Context, in *ReportContentReq, opts ...grpc.CallOption) (*ReportContentResp, error)
 	RefreshReportContent(ctx context.Context, in *ReportContentReq, opts ...grpc.CallOption) (*RefreshReportContentResp, error)
-	SetReportDependencyData(ctx context.Context, in *SetDependencyDataReq, opts ...grpc.CallOption) (*SetDependencyDataResp, error)
-	UpdateReportDependencyData(ctx context.Context, in *SetDependencyDataReq, opts ...grpc.CallOption) (*SetDependencyDataResp, error)
+	InsertReportDependencyData(ctx context.Context, in *InsertDependencyDataReq, opts ...grpc.CallOption) (*SetDependencyDataResp, error)
+	UpdateReportDependencyData(ctx context.Context, in *UpdateDependencyDataReq, opts ...grpc.CallOption) (*SetDependencyDataResp, error)
 	GetReportDependencyData(ctx context.Context, in *GetDependencyDataReq, opts ...grpc.CallOption) (*GetDependencyDataResp, error)
 }
 
@@ -74,16 +74,16 @@ func (c *rcServiceClient) RefreshReportContent(ctx context.Context, in *ReportCo
 	return out, nil
 }
 
-func (c *rcServiceClient) SetReportDependencyData(ctx context.Context, in *SetDependencyDataReq, opts ...grpc.CallOption) (*SetDependencyDataResp, error) {
+func (c *rcServiceClient) InsertReportDependencyData(ctx context.Context, in *InsertDependencyDataReq, opts ...grpc.CallOption) (*SetDependencyDataResp, error) {
 	out := new(SetDependencyDataResp)
-	err := c.cc.Invoke(ctx, RcService_SetReportDependencyData_FullMethodName, in, out, opts...)
+	err := c.cc.Invoke(ctx, RcService_InsertReportDependencyData_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
 	return out, nil
 }
 
-func (c *rcServiceClient) UpdateReportDependencyData(ctx context.Context, in *SetDependencyDataReq, opts ...grpc.CallOption) (*SetDependencyDataResp, error) {
+func (c *rcServiceClient) UpdateReportDependencyData(ctx context.Context, in *UpdateDependencyDataReq, opts ...grpc.CallOption) (*SetDependencyDataResp, error) {
 	out := new(SetDependencyDataResp)
 	err := c.cc.Invoke(ctx, RcService_UpdateReportDependencyData_FullMethodName, in, out, opts...)
 	if err != nil {
@@ -108,8 +108,8 @@ type RcServiceServer interface {
 	ListReportInfos(context.Context, *PaginationReq) (*ReportInfosResp, error)
 	GetReportContent(context.Context, *ReportContentReq) (*ReportContentResp, error)
 	RefreshReportContent(context.Context, *ReportContentReq) (*RefreshReportContentResp, error)
-	SetReportDependencyData(context.Context, *SetDependencyDataReq) (*SetDependencyDataResp, error)
-	UpdateReportDependencyData(context.Context, *SetDependencyDataReq) (*SetDependencyDataResp, error)
+	InsertReportDependencyData(context.Context, *InsertDependencyDataReq) (*SetDependencyDataResp, error)
+	UpdateReportDependencyData(context.Context, *UpdateDependencyDataReq) (*SetDependencyDataResp, error)
 	GetReportDependencyData(context.Context, *GetDependencyDataReq) (*GetDependencyDataResp, error)
 	mustEmbedUnimplementedRcServiceServer()
 }
@@ -127,10 +127,10 @@ func (UnimplementedRcServiceServer) GetReportContent(context.Context, *ReportCon
 func (UnimplementedRcServiceServer) RefreshReportContent(context.Context, *ReportContentReq) (*RefreshReportContentResp, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method RefreshReportContent not implemented")
 }
-func (UnimplementedRcServiceServer) SetReportDependencyData(context.Context, *SetDependencyDataReq) (*SetDependencyDataResp, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method SetReportDependencyData not implemented")
+func (UnimplementedRcServiceServer) InsertReportDependencyData(context.Context, *InsertDependencyDataReq) (*SetDependencyDataResp, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method InsertReportDependencyData not implemented")
 }
-func (UnimplementedRcServiceServer) UpdateReportDependencyData(context.Context, *SetDependencyDataReq) (*SetDependencyDataResp, error) {
+func (UnimplementedRcServiceServer) UpdateReportDependencyData(context.Context, *UpdateDependencyDataReq) (*SetDependencyDataResp, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method UpdateReportDependencyData not implemented")
 }
 func (UnimplementedRcServiceServer) GetReportDependencyData(context.Context, *GetDependencyDataReq) (*GetDependencyDataResp, error) {
@@ -203,26 +203,26 @@ func _RcService_RefreshReportContent_Handler(srv interface{}, ctx context.Contex
 	return interceptor(ctx, in, info, handler)
 }
 
-func _RcService_SetReportDependencyData_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(SetDependencyDataReq)
+func _RcService_InsertReportDependencyData_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(InsertDependencyDataReq)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(RcServiceServer).SetReportDependencyData(ctx, in)
+		return srv.(RcServiceServer).InsertReportDependencyData(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: RcService_SetReportDependencyData_FullMethodName,
+		FullMethod: RcService_InsertReportDependencyData_FullMethodName,
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(RcServiceServer).SetReportDependencyData(ctx, req.(*SetDependencyDataReq))
+		return srv.(RcServiceServer).InsertReportDependencyData(ctx, req.(*InsertDependencyDataReq))
 	}
 	return interceptor(ctx, in, info, handler)
 }
 
 func _RcService_UpdateReportDependencyData_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(SetDependencyDataReq)
+	in := new(UpdateDependencyDataReq)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
@@ -234,7 +234,7 @@ func _RcService_UpdateReportDependencyData_Handler(srv interface{}, ctx context.
 		FullMethod: RcService_UpdateReportDependencyData_FullMethodName,
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(RcServiceServer).UpdateReportDependencyData(ctx, req.(*SetDependencyDataReq))
+		return srv.(RcServiceServer).UpdateReportDependencyData(ctx, req.(*UpdateDependencyDataReq))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -277,8 +277,8 @@ var RcService_ServiceDesc = grpc.ServiceDesc{
 			Handler:    _RcService_RefreshReportContent_Handler,
 		},
 		{
-			MethodName: "SetReportDependencyData",
-			Handler:    _RcService_SetReportDependencyData_Handler,
+			MethodName: "InsertReportDependencyData",
+			Handler:    _RcService_InsertReportDependencyData_Handler,
 		},
 		{
 			MethodName: "UpdateReportDependencyData",
